--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,17 @@
 body {
     background-color: #FFE6E5;
+    text-align: center;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1 {
     font-family: 'Roboto', sans-serif;
+    font-weight: 700;
     color: #270502;
+    font-size: 2rem;
+    margin: 1.5rem auto;
 }
 
-ul,
-li {
-    font-family: Arial, Helvetica, sans-serif;
-    color: #171D1C;
-}
+
 
 p {
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -30,4 +25,86 @@ a {
 button {
     background-color: #FA8072;
     border-radius: 5px;
+}
+
+main {
+    margin: 0 auto;
+}
+
+/* nav bar  */
+nav {
+    display: flex;
+}
+
+ul,
+li {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #171D1C;
+    display: inline-flex;
+    position: relative;
+    float: inline-start;
+    margin: 1rem 1.5rem;
+}
+
+.nav-links li a:hover {
+    color: white;
+}
+
+/* Hero Section */
+.hero-container {
+    padding: 5% 10%;
+    position: relative;
+    width: 100%;
+    height: 350px;
+}
+
+
+
+.hero-img {
+    z-index: 1;
+    position: absolute;
+    right: 38%;
+}
+
+.hero-img-bg {
+    width: 20%;
+    height: 90%;
+    border-radius: 50%;
+    position: absolute;
+    z-index: 0;
+    right: 49%;
+    /* top: 10%; */
+    bottom: 10%;
+}
+
+/* Table Styles  */
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    width: 100%;
+    margin-top: 10px;
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 10px 20px;
+}
+
+th {
+    background-color: rgb(235, 235, 235);
+}
+
+td {
+    text-align: center;
+}
+
+tr:nth-child(even) td {
+    background-color: rgb(250, 250, 250);
+}
+
+tr:nth-child(odd) td {
+    background-color: rgb(245, 245, 245);
 }
