--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ h1 {
     font-weight: 700;
     color: #270502;
     font-size: 2rem;
-    margin: 1.5rem auto;
+    margin: 2rem auto;
 }
 
 
@@ -33,7 +33,12 @@ main {
 
 /* nav bar  */
 nav {
+    width: 100%;
     display: flex;
+    margin: 30px 0;
+    background-color: whitesmoke;
+    border-top: 2px solid maroon;
+    border-bottom: 2px solid maroon;
 }
 
 ul,
@@ -52,29 +57,29 @@ li {
 
 /* Hero Section */
 .hero-container {
-    padding: 5% 10%;
-    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 350px;
+    margin: 50px auto;
 }
-
 
 
 .hero-img {
     z-index: 1;
-    position: absolute;
-    right: 42%;
+    max-width: 50%;
+    max-height: 50%;
 }
 
 .hero-img-bg {
     width: 20%;
-    height: 90%;
+    height: 50%;
+    top: 20%;
     border-radius: 50%;
     position: absolute;
     z-index: 0;
-    right: 49%;
-    /* top: 10%; */
-    bottom: 10%;
 }
 
 /* Table Styles  */
@@ -107,4 +112,81 @@ tr:nth-child(even) td {
 
 tr:nth-child(odd) td {
     background-color: rgb(245, 245, 245);
+}
+
+
+/* footer  */
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 40px 500px;
+}
+
+footer p {
+    font-size: .5rem;
+}
+
+footer i {
+    transition: 1s;
+}
+
+footer i:hover {
+    color: white;
+}
+
+/* media queries  */
+
+/* mobile and tablet  */
+@media (min-width:320px) and (max-width: 768px) {
+    .hero-img {
+        z-index: 1;
+        max-width: 50%;
+        max-height: 50%;
+    }
+
+    .hero-img-bg {
+        max-width: 50%;
+        max-height: 20%;
+        top: 30%;
+        border-radius: 50%;
+        position: absolute;
+        z-index: 0;
+    }
+}
+
+/* Laptops  */
+@media (min-width:769px) and (max-width: 1024px) {
+    .hero-img {
+        z-index: 1;
+        max-width: 50%;
+        max-height: 50%;
+    }
+
+    .hero-img-bg {
+        width: 20%;
+        height: 30%;
+        top: 15%;
+        border-radius: 50%;
+        position: absolute;
+        z-index: 0;
+    }
+}
+
+/* Desktop  */
+@media (min-width: 1025px) and (max-width: 1200px) {
+    .hero-img {
+        z-index: 1;
+        max-width: 50%;
+        max-height: 50%;
+    }
+
+    .hero-img-bg {
+        width: 20%;
+        height: 50%;
+        top: 30%;
+        border-radius: 50%;
+        position: absolute;
+        z-index: 0;
+    }
 }
