--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,25 @@
 body {
-    background-color: #FFE6E5;
+    background-color: #FFE8D6;
     text-align: center;
 }
 
 h1 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
+    font-family: 'Yellowtail', cursive;
+    font-weight: bold;
     color: #270502;
-    font-size: 2rem;
+    font-size: 3rem;
     margin: 2rem auto;
 }
 
-
+h3 {
+    font-family: 'Roboto', sans-serif;
+}
 
 p {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: 'Roboto Slab', serif;
 }
 
-a {
-    text-decoration: none;
-    color: #FA413A;
-}
+
 
 button {
     background-color: #FA8072;
@@ -44,15 +43,19 @@ nav {
 ul,
 li {
     font-family: Arial, Helvetica, sans-serif;
-    color: #171D1C;
     display: inline-flex;
     position: relative;
     float: inline-start;
     margin: 1rem 1.5rem;
 }
 
+a {
+    text-decoration: none;
+    color: #3F4238;
+}
+
 .nav-links li a:hover {
-    color: white;
+    color: #B98B73;
 }
 
 /* Hero Section */
@@ -87,15 +90,25 @@ main {
     margin-bottom: 50px;
 }
 
+.info-text {
+    line-height: 1.5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
 
 /* Table Styles  */
 table {
+    display: block;
     border-collapse: collapse;
     border: 2px solid rgb(200, 200, 200);
     letter-spacing: 1px;
     font-size: 0.8rem;
-    width: 100%;
-    margin-top: 10px;
+    margin: 30px auto;
+    overflow-y: scroll;
+    width: 600px;
+    height: 237px;
+    font-family: 'Roboto';
 }
 
 td,
@@ -105,7 +118,7 @@ th {
 }
 
 th {
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(255, 255, 255);
 }
 
 td {
@@ -113,11 +126,11 @@ td {
 }
 
 tr:nth-child(even) td {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(245, 214, 214);
 }
 
 tr:nth-child(odd) td {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(178, 216, 252);
 }
 
 
@@ -139,8 +152,36 @@ footer i {
 }
 
 footer i:hover {
-    color: white;
+    color: #6B705C;
 }
+
+/* sales page styles  */
+
+fieldset {
+    border: 1px solid black;
+    text-align: center;
+    margin: 30px;
+}
+
+fieldset legend {
+    margin-bottom: 30px;
+}
+
+label {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 5px 10px;
+}
+
+fieldset input {
+    width: 100px;
+}
+
+fieldset button {
+    margin: 30px;
+}
+
+
+
 
 /* media queries  */
 
